--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "3.3",
+        "filament/widgets": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/flux": "^2.1",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.7.0"
     },
