--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.4.31",
+        "postcss": "^8.5.3",
         "tailwindcss": "^3.1.0",
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "@tailwindcss/typography": "^0.5.16"
+        "@tailwindcss/typography": "^0.5.16",
+        "postcss-nesting": "^13.0.1"
     }
 }
