--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "blade-ui-kit/blade-icons": "^1.8",
+        "davidhsianturi/blade-bootstrap-icons": "^2.0",
         "filament/filament": "3.3",
         "filament/widgets": "^3.3",
         "laravel/framework": "^12.0",
