chore: add & update some packages

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.4",
-        "livewire/volt": "^1.7.0"
+        "livewire/volt": "^1.7.0",
+        "mallardduck/blade-boxicons": "^2.4",
+        "owenvoke/blade-fontawesome": "^2.9",
+        "secondnetwork/blade-tabler-icons": "^3.33"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
