--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@tailwindcss/typography": "^0.5.16",
+        "aos": "^2.3.4",
         "postcss-nesting": "^13.0.1"
     }
 }
